viernes, problemas con docker

--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,7 @@ production:
     database: lab_06_production
     username: lab_06
     password: <%= ENV["LAB_06_DATABASE_PASSWORD"] %>
-    host: db
+    host: <%= ENV.fetch("DB_HOST", "localhost") %>
   cache:
     <<: *primary_production
     database: lab_06_production_cache
