--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: lab_06
 
 # Name of the container image.
-image: your-user/lab_06
+image: ppariztia1/lab_06
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - 167.172.222.171
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -18,14 +18,14 @@ servers:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
-  ssl: true
-  host: app.example.com
+  ssl: false
+  host: 167.172.222.171
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: ppariztia1
 
   # Always use an access token rather than real password when possible.
   password:
@@ -36,6 +36,9 @@ env:
   secret:
     - RAILS_MASTER_KEY
   clear:
+    RAILS_ENV: production
+    DB_HOST: <%= ENV.fetch("DB_HOST", "localhost") %>
+    LAB_06_DATABASE_PASSWORD: <%= ENV.fetch("LAB_06_DATABASE_PASSWORD", "password") %>
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
@@ -76,9 +79,7 @@ asset_path: /rails/public/assets
 # Configure the image builder.
 builder:
   arch: amd64
-
-  # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
-  # remote: ssh://docker@docker-builder-server
+  remote: "root@167.172.222.171"
   #
   # # Pass arguments and secrets to the Docker build process
   # args:
