--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -23,7 +23,7 @@ proxy:
 
 # Credentials for your image host.
 registry:
-  # Specify the registry server, if you're not using Docker Hub
+  # Specify the registry server, if you're not using Docker Hub.
   server: registry.digitalocean.com/registryweb
   username: <%= ENV["DOCKER_USERNAME"] %>
   password: <%= ENV["DOCKER_PASSWORD"] %>
